Modified db file.

--- a/my_tennis_club/members/templates/template.html
+++ b/my_tennis_club/members/templates/template.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html>
 <body>
+    {% include "mymenu.html" with me="TOBIAS" sponsor="W3SCHOOLS" %}
+    <br/>
+    
+    <table border='1'>
+    <tr>
+        <th>ID</th>
+        <th>Firstname</th>
+        <th>Lastname</th>
+    </tr>
+    {% for x in mymembers %}
+        <tr>
+        <td>{{ x.id }}</td>
+            <td>{{ x.firstname }}</td>
+        <td>{{ x.lastname }}</td>
+        </tr>
+    {% endfor %}
+    </table>
 
-{% for x in fruits %}
-  <h1>{{ x }}</h1>
-{% endfor %}
 
-<p>In views.py you can see what the fruits variable looks like.</p>
 
+    {% include 'footer.html' %}
 </body>
 </html>
