--- a/my_tennis_club/members/templates/details.html
+++ b/my_tennis_club/members/templates/details.html
@@ -1,3 +1,5 @@
+{% extends "master.html" %}
+
 {% block title %}
     Details about {{ mymember.firstname }} {{ mymember.lastname }}
 {% endblock %}
