Added style to my project.

--- a/my_tennis_club/members/templates/master.html
+++ b/my_tennis_club/members/templates/master.html
@@ -2,10 +2,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="{% static 'mystyles.css' %}">
   <title>{% block title %}{% endblock %}</title>
-  <link rel="stylesheet" href="{% static 'mystyles.css' %}">  
 </head>
 <body>
+
+<div class="topnav">
+  <a href="/">HOME</a> |
+  <a href="/members">MEMBERS</a>
+</div>
 
 {% block content %}
 {% endblock %}
