--- a/my_tennis_club/members/templates/master.html
+++ b/my_tennis_club/members/templates/master.html
@@ -1,19 +1,28 @@
-{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="{% static 'mystyles.css' %}">
   <title>{% block title %}{% endblock %}</title>
+  {% load bootstrap5 %}
+  {% bootstrap_css %}
+  {% bootstrap_javascript %}
 </head>
-<body>
+<body style>
 
-<div class="topnav">
-  <a href="/">HOME</a> |
-  <a href="/members">MEMBERS</a>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <div class="container-fluid">
+            <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/members">Members</a>
+            </li>
+            </ul>
+        </div>
+    </nav>
+
+  {% block content %}
+  {% endblock %}
 </div>
-
-{% block content %}
-{% endblock %}
-
 </body>
 </html>
