--- a/my_tennis_club/chat/templates/containers/chat/home.html
+++ b/my_tennis_club/chat/templates/containers/chat/home.html
@@ -2,10 +2,33 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" href="{% static 'home.css' %}">
-<link rel="stylesheet" href="{% static 'containers/chat/sidebar.css' %}">
 <link rel="stylesheet" href="{% static 'containers/chat/content.css' %}">
+
+<link rel="stylesheet" href="{% static 'containers/chat/sidebar.css' %}">
+<link href="{% static 'fontawesomefree/css/fontawesome.css' %}" rel="stylesheet" type="text/css">
+<link href="{% static 'fontawesomefree/css/brands.css' %}" rel="stylesheet" type="text/css">
+<link href="{% static 'fontawesomefree/css/solid.css' %}" rel="stylesheet" type="text/css">
+
 <body>
     {% include 'containers/chat/sidebar.html' %}
     {% include 'containers/chat/content.html' %}
+
+    <script>
+        function getCookie(name) {
+            var cookieValue = null;
+            if (document.cookie && document.cookie !== '') {
+                var cookies = document.cookie.split(';');
+                for (var i = 0; i < cookies.length; i++) {
+                    var cookie = cookies[i].trim();
+                    // Search for CSRF token cookie
+                    if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                        cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                        break;
+                    }
+                }
+            }
+            return cookieValue;
+        }
+    </script>
 </body>
 </html>
