--- a/my_tennis_club/chat/templates/containers/chat/sidebar.html
+++ b/my_tennis_club/chat/templates/containers/chat/sidebar.html
@@ -1,4 +1,13 @@
-<div class="chat-sidebar">
-    <h2>Chat history</h2>
-    <p>This is the content of the sidebar.</p>
+<div class="chat-sidebar-container">
+    <div class="chat-history-date">
+        <p>2023-12-13</p>
+    </div>
+    <div class="chat-history-title">
+        <a class="chat-history-title-link">
+            What are you doing?
+        </a>
+        <button class="chat-history-button-del">
+            <i class="fa-solid fa-trash-can"></i>
+        </button>
+    </div>
 </div>
